# nitroc-ui

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  nitroc-ui.service  notes-install  pyproject.toml  requirements.txt  setup.py
.github/workflows/: unit_test.yml
nitrocui/: cellular_signal_quality.py  crosec_sensors.py  data_model.py  footer.html  gnss.html  gnss_edit.html  gnss_model.py  gnss_pos.py  gpsd.py  i2c.py  led.py  main.html  mcp9600.py  mm.py  network_utils.py  obd_client.py  pac1921.py  pagegnss.py  pagegnssedit.py  pageinfo.py  pagetraffic.py  phy_info.py  realtime.html  realtime.py  server.py  sysinfo_base.py  sysinfo_power.py  sysinfo_sensors.py  sysinfo_sysfs.py  sysinfo_tc.py  sysinfo_thermal.py  things.py  tools.py  traffic.html  vnstat.py  wwan_model.py
nitrocui/static/: manifest.json
tests/: test_mm_result.py  test_secs_conversion.py  test_sig_quality.py  test_transmit_queue.py
